change template word

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,12 +10,8 @@
 	<div class="clear"></div>
 	<div id="footer">
 	  <div class="HeaderContainer">
-		<p>&copy; 2012 Tozuo 京ICP备12018208号-2</p>
+		<p>&copy; 2012 daydayfree</p>
 	  </div>
 	</div>
-	<script type="text/javascript">
-	  var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-	  document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fd8591a3eef4c9dc9e2ef10bd06275d3a' type='text/javascript'%3E%3C/script%3E"));
-	</script>
   </body>
 {% end %}
