--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN">
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="左左,左左网,插画,博客,手工,服饰,背景,时尚生活,购物,艺术,博客,旅行,街拍,创意,DIY" />
-	<meta name="description" content="左左网，分享生活中的美好，发现另外一个你，发现好友，发现画,博客,手工,服饰,背景,时尚生活,购物,艺术,博客,旅行,街拍,创意,DIY的美妙所在。" />
+	<meta name="keywords" content="Diggit" />
+	<meta name="description" content="Diggit sharing images" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
-    <title>{{ escape(handler.settings["blade_title"]) }}</title>
+    <title>{{ escape(handler.settings["diggit_title"]) }}</title>
     <link rel="stylesheet" href="{{ static_url("styles/main.css") }}" type="text/css"/>
 	<script type="text/javascript" src="{{ static_url("javascript/jquery-1.6.4.min.js") }}"></script>
 	<script type="text/javascript" src="{{ static_url("javascript/main.js") }}"></script>
