--- a/src/templates/modules/account.html
+++ b/src/templates/modules/account.html
@@ -1,21 +1,21 @@
 <div class="account">
   <div class="account photo">
-	<img alt="我的头像" src="/static/big-photo.jpg"/>
+	<img alt="Header Photo" src="/static/big-photo.jpg"/>
   </div>
   <div class="account settings">
 	<ul>
-	  <li><a href='/me/liked'>我的喜好</a></li>
-	  <li><a href='/me/followed'>我的关注</a></li>
-	  <li><a href='/me/follower'>我的粉丝</a></li>
-	  <li><a href='/me/account'>个人资料</a></li>
-	  <li><a href='/me/privacy'>隐私权</a></li>
+	  <li><a href='/me/liked'>Likes</a></li>
+	  <li><a href='/me/followed'>Following</a></li>
+	  <li><a href='/me/follower'>Followed</a></li>
+	  <li><a href='/me/account'>Profile</a></li>
+	  <li><a href='/me/privacy'>Copyright</a></li>
 	</ul>
   </div>
   <div class="account logout">
 	<table style="width: 100%">
 	  <tr>
-		<td><a href="/logout">退出</a></td>
-		<td align="right"><a href='/exchange'>切换用户</a></td>
+		<td><a href="/logout">Logout</a></td>
+		<td align="right"><a href='/exchange'>Exchange account</a></td>
 	  </tr>
 	</table>
   </div>
