--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -9,7 +9,7 @@
 {% block canvas %}
 <div id="content">
   <div class="pageheader">
-	<h2>活跃用户列表</h2>
+	<h2>Users</h2>
   </div>
   <div class="clear"></div>
   <div class="catalog">
@@ -33,7 +33,7 @@
 	{% end %}
 	{% else %}
 	<div class="notice">
-	  <p>没有结果。</p>
+	  <p>No users</p>
 	</div>
 	{% end %}
 	</div>
