--- a/src/templates/all.html
+++ b/src/templates/all.html
@@ -20,11 +20,11 @@ $(document).ready(function() {
   <div class="clear"></div>
 </div>
 <div id="LoadingPins">
-  <img alt="加载图片中..." src="{{ static_url("images/BouncingLoader.gif") }}"/>
-  <span>正在加载...</span>
+  <img alt="loading..." src="{{ static_url("images/BouncingLoader.gif") }}"/>
+  <span>loading...</span>
 </div>
 <div id="pager" style="display: none;">
-  <a class='Button Button13 WhiteButton' href='/all?p={{ p+1 }}&category={{ category }}'><strong> 更多... </strong><span></span></a>
+  <a class='Button Button13 WhiteButton' href='/all?p={{ p+1 }}&category={{ category }}'><strong> More... </strong><span></span></a>
 </div>
 <input id="p" type="hidden" value="{{ p }}">
 <input id="category" type="hidden" value="{{ category }}"/>
