--- a/src/templates/base_about.html
+++ b/src/templates/base_about.html
@@ -9,21 +9,21 @@
       <ul>
         <li>
           <a class="selected loaded" href="/about">
-            <span>关于我们</span>
+            <span>About us</span>
             <span class="pointer normal"></span>
             <span class="pointer hover"></span>
           </a>
         </li>
         <li>
           <a href="/about/help">
-            <span>帮助</span>
+            <span>Help</span>
             <span class="pointer normal"></span>
             <span class="pointer hover"></span>
           </a>
         </li>
         <li>
           <a href="/about/term">
-            <span>开发团队</span>
+            <span>Term</span>
             <span class="pointer normal"></span>
             <span class="pointer hover"></span>
           </a>
@@ -39,12 +39,8 @@
 <div class="clear"></div>
 <div id="footer">
   <div class="HeaderContainer">
-	<p>&copy; 2012 Tozuo 京ICP备12018208号-2</p>
+	<p>&copy; 2012 daydayfree</p>
   </div>
 </div>
-<script type="text/javascript">
-  var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-  document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fd8591a3eef4c9dc9e2ef10bd06275d3a' type='text/javascript'%3E%3C/script%3E"));
-</script>
 </body>
 {% end %}
