--- a/src/templates/item.html
+++ b/src/templates/item.html
@@ -10,7 +10,7 @@
     <div class="WhiteContainer clearfix">
       <div id="PinPinner">
         <a class="ImgLink" id="PinnerImage" href="/user/{{ entry["user_id"] }}">
-		  <img alt="{{ entry["user"]["name"] }}头像" src="{{ handler.get_photo_url(entry["user"]) }}"></a>
+		  <img alt="{{ entry["user"]["name"] }} Header" src="{{ handler.get_photo_url(entry["user"]) }}"></a>
         <p id="PinnerName">
 		  {{ entry["title"] or "untitled" }}
 		  <span style="font-weight: 300;" class="colorless">&nbsp;via&nbsp;</span>
@@ -27,16 +27,16 @@
 		  <li class="like-button">
 			{% if faved %}
 			<a class="Button Button13 WhiteButton disabled clickable unlike_pin" href="javascript:void(0)" onclick="do_fav({{ entry["_id"] }}, this)">
-              <strong><em></em>取消喜欢</strong><span></span>
+              <strong><em></em>Unlike</strong><span></span>
 			</a>
 			{% else %}
 			<a class="Button Button13 WhiteButton like_pin" href="javascript:void(0)" onclick="do_fav({{ entry["_id"] }}, this)">
-              <strong><em></em>喜欢</strong><span></span>
+              <strong><em></em>Like</strong><span></span>
 			</a>
 			{% end %}
 			{% else %}
 			<a href="{{ "/login?next=%s" % url_escape(request.uri) }}" class="Button Button13 WhiteButton like_pin">
-			  <strong><em></em>喜欢</strong><span></span>
+			  <strong><em></em>Like</strong><span></span>
 			</a>
           </li>
 		  {% end %}
@@ -78,15 +78,15 @@
         </div>
       </div>
       {% else %}
-	  <div id="loginToComment"><a href="{{ "/login?next=%s" % url_escape(request.uri) }}">登录进行评论...</a></div>
+	  <div id="loginToComment"><a href="{{ "/login?next=%s" % url_escape(request.uri) }}">Login to reply...</a></div>
 	  {% end %}
 
       <div class="PinActivity" id="PinLikes">
 		{% if entry["likes"] > 0 %}
-        <h4>喜欢</h4>
+        <h4>Like</h4>
 		{% end %}
 		{% if entry["likes"] > 10 %}
-        <p class="PinMoreActivity"><strong>+{{ entry["likes"] }}</strong>更多喜欢</p>
+        <p class="PinMoreActivity"><strong>+{{ entry["likes"] }}</strong>More likers</p>
 		{% end %}
       </div>
     </div>
