--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -14,7 +14,7 @@ $(document).ready(function() {
 {% block canvas %}
 <div id="ContextBar">
   <p>
-    <span class="greyselected"> &mdash;搜索结果 for <span class="hilight">{{ q }}</span></span>
+    <span class="greyselected"> &mdash;Results for <span class="hilight">{{ q }}</span></span>
   </p>
 </div>
 <div id="ColumnContainer">
@@ -25,11 +25,11 @@ $(document).ready(function() {
   <div class="clear"></div>
 </div>
 <div id="LoadingPins">
-  <img alt="加载图片中..." src="{{ static_url("images/BouncingLoader.gif") }}"/>
-  <span>正在加载...</span>
+  <img alt="loading..." src="{{ static_url("images/BouncingLoader.gif") }}"/>
+  <span>loading...</span>
 </div>
 <div id="pager" style="display: none;">
-  <a class='Button Button13 WhiteButton' href='/search?p={{ p+1 }}&q={{ q }}'><strong> 更多... </strong><span></span></a>
+  <a class='Button Button13 WhiteButton' href='/search?p={{ p+1 }}&q={{ q }}'><strong> More... </strong><span></span></a>
 </div>
 <input id="p" type="hidden" value="{{ p }}">
 {% end %}
