--- a/src/templates/upload.html
+++ b/src/templates/upload.html
@@ -70,29 +70,29 @@
 <div>
   <div id="login_logo"></div>
   <form action="" method="post" enctype="multipart/form-data" class="Form StaticForm" id="profileEdit">
-	<h3>上传图片</h3>
+	<h3>Upload Images</h3>
 	<ul>
 	  <li>
-		<label for="id_title">标题</label>
+		<label for="id_title">Title</label>
 		<div class="Right">
 		  <input id="id_title" type="text" name="title" onchange="change_params(this)"/>
 		</div>
 	  </li>
 	  <li>
-		<label for="id_tags">标签</label>
+		<label for="id_tags">Tags</label>
 		<div class="Right">
 		  <input id="id_tags" type="text" name="tags" onchange="change_params(this)"/>
-		  <span class="help_text">使用，逗号隔开</span>
+		  <span class="help_text">Split by , </span>
 		</div>
 	  </li>
 	  <li>
-		<label for="id_link">链接</label>
+		<label for="id_link">Image link</label>
 		<div class="Right">
 		  <input id="id_link" type="text" name="link" onchange="change_params(this)"/>
 		</div>
 	  </li>
 	  <li>
-		<label for="id_desp">描述</label>
+		<label for="id_desp">Description</label>
 		<div class="Right">
 		  <textarea id="id_desp" rows="3" name="description" onchange="change_params(this)"></textarea>
 		</div>
@@ -104,7 +104,7 @@
 	  <div id="divStatus"></div>
 	  <div>
 		<span id="spanButtonPlaceHolder"></span>
-		<input id="btnCancel" type="button" value="取消" onclick="swfu.cancelQueue();" style="display: none"/>
+		<input id="btnCancel" type="button" value="Cancel" onclick="swfu.cancelQueue();" style="display: none"/>
 	  </div>
 	</div>
 	{{ xsrf_form_html() }}
